# django_site

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
blogapp/management/commands/: create_article.py  create_authors.py  create_categorys.py  create_tags.py
blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py  0003_alter_article_tags.py
blogapp/templates/blogapp/: article_detail.html  articles-list.html
config/: asgi.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
myapi/: serializers.py  urls.py  views.py
myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
myauth/management/commands/: bind_user.py
myauth/migrations/: 0001_initial.py
myauth/templates/myauth/: base.html  login.html  profile_info.html  profile_list.html  register.html  update.html
requestdataapp/: forms.py  middlewares.py  urls.py  views.py
requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
shopapp/fixtures/: group-fixtures.json  order-fixtures.json  product-fixtures.json  shopapp-fixtures.json  user-fixtures.json
shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  create_products.py  selecting_fields.py  update_order.py
shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options_and_more.py
shopapp/templates/admin/: csv_form.html
shopapp/templates/shopapp/: base.html  groups_list.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  order_update_form.html  orders-change-list.html  product_confirm_delete.html  product_form.html  product_update_form.html  products-change-list.html  products-details.html  products-list.html  shop-index.html  user_orders_list.html
