[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Azamat Baltaev <1210044@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "4.1.5"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.2"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^20.1.0"
pillow = "^10.1.0"
requests = "^2.28.2"
sentry-sdk = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
